--- a/lp.css
+++ b/lp.css
@@ -6,11 +6,20 @@
     transition: 0.2s;
     text-transform: capitalize;
     text-decoration: none;
+   
 
 }
+
 html{
     font-size: 62.5%;
     overflow: hidden;
+    background-image:linear-gradient(rgba(255, 254, 254, 0.3), rgba(255, 252, 252, 0.15)), url('./hospital.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+}
+.main{
+    
 }
 .header{
     padding: 1.75rem 7%;
@@ -20,6 +29,7 @@ html{
     align-items: center;
     position: fixed;
     left: 0;
+    
     right: 0;
 }
 .header #logo{
@@ -72,6 +82,68 @@ html{
     border: 1px solid  rgb(215, 70, 174);
 }
 
+.main {
+   
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: rgb(0, 0, 0);
+  }
+  
+  section h3 {
+    margin-top: 300px;
+    font-size: 35px;
+    font-weight: 200;
+    letter-spacing: 3px;
+    text-shadow: 1px 1px 2px black;
+  }
+  
+  section h1 {
+    margin: 30px 0 20px 0;
+    font-size: 55px;
+    font-weight: 700;
+    text-shadow: 2px 1px 5px black;
+    text-transform: uppercase;
+  }
+  
+  section p {
+    font-size: 25px;
+    word-spacing: 2px;
+    margin-bottom: 25px;
+    text-shadow: 1px 1px 1px rgb(255, 255, 255);
+  }
+
+  section .btnone {
+    /*background: #00b894;*/
+    color: white;
+    background: rgb(215, 70, 174) ;
+    padding: 1.5rem 3rem;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    transition: 0.5s;
+  }
+  
+  .btnone:hover {
+    background: transparent;
+    border: 1px solid  rgb(215, 70, 174);
+  }
+  
+  section .btntwo {
+    color: white;
+    background: rgb(215, 70, 174) ;
+    padding: 1.5rem 3rem;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    transition: 0.5s;
+  }
+  
+  .btntwo:hover {
+    background: transparent;
+    border: 1px solid  rgb(215, 70, 174);
+  }
 
 
 
@@ -86,38 +158,3 @@ html{
 
 
 
-
-
-@media(max-width:767px){
-    html{
-        font-size: 55%;
-    }
-    .header{
-        padding: 2rem;
-    }
-    .icons div{
-        display: initial;
-    }
-    .navbar{
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background: rgb(215, 70, 174);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        clip-path: polygon(0 0, 0 0,0 100%,0 100%);
-    }
-    .navbar a{
-        display: block;
-        font-size:3rem;
-        font-weight: bolder;
-        margin: 1rem ;
-        padding: 1rem;
-        color: black;
-
-    }
-}
